--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  border: 2px solid ;
+  border-radius: 0.75em;
+  padding-left: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+select {
+  background-color: #f9c4d2;
+  border: 2px solid #b18597;
+  border-radius: 0.75em;
+  padding-left: 2px;
+}
+
+h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+h3 {
+  margin-top: 20px;
+}
+
+input[type="number"], input[type="time"], input[type="text"], select {
+  margin: 10px;
+}
+
+.selector_title {
+ text-align: center;
+}
+
+.timer {
+  display: flex;
+  align-items: center;
+}
+
+@media (min-width: 601px) {
+  .selector_and_shedules {
+    display: flex;
+    border: 1px solid black;
+    padding: 10px;
+    height: 180px;
+    border-radius: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .input_div {
+    margin-left: 50px;
+    width: 300px;
   }
 }
+
+
+@media (max-width: 600px) {
+  .selector_and_shedules {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 10px;
+    height: auto; 
+    border-radius: 10px;
+    width: 280px;
+  }
+
+  .input_div {
+    margin-top: 8px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    margin-left: 0px;
+  }
+}
+
+
+
