--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -85,8 +85,6 @@ button.two_buttons::before {
  bottom: 0;
  background: #000000;
  border-radius: inherit;
- -webkit-box-shadow: 0 0 0 2px , 0 0.625em 0 0 ;
- box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
  -webkit-transform: translate3d(0, 0.75em, -1em);
  transform: translate3d(0, 0.75em, -1em);
  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
@@ -97,22 +95,26 @@ button.two_buttons:hover {
  transform: translate(0, 0.25em);
 }
 
-button.two_buttons:hover::before {
- -webkit-box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
- box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
- -webkit-transform: translate3d(0, 0.5em, -1em);
- transform: translate3d(0, 0.5em, -1em);
-}
+
 
 button.two_buttons:active {
- background: #ffe9e9;
+ background: #ffffff;
  -webkit-transform: translate(0em, 0.75em);
  transform: translate(0em, 0.75em);
 }
 
-button.two_buttons:active::before {
- -webkit-box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
- box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
- -webkit-transform: translate3d(0, 0, -1em);
- transform: translate3d(0, 0, -1em);
+#copy_button {
+    margin-top: 15px;
+    width: 150px;
+    
 }
+
+#check_link {
+    opacity: 0.3
+}
+
+a {
+    text-decoration: underline;
+    color: inherit;
+}
+
