--- a/src/components/Weeks/weeks.css
+++ b/src/components/Weeks/weeks.css
@@ -4,6 +4,17 @@ select {
     width: 200px;
 }
 
+.days_selector {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 5px;
+}
+
 .clock {
-    width: 200px;
+    width: 120px;
+}
+
+input {
+    accent-color: black;
 }
