--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -114,7 +114,16 @@ button.two_buttons:active {
 }
 
 a {
+    display: inline-block;
     text-decoration: underline;
     color: inherit;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+a:hover {
+    transform: scale(1.1);
+    color:black
 }
 
