--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -28,7 +28,9 @@ h3 {
         border-radius: 10px;
         font-weight: bold;
         width: 485px;
-        height:53px
+        height:100%;
+        padding-right: 10px;
+        padding-left: 10px;
     
     }
 }
@@ -43,7 +45,12 @@ h3 {
         border-radius: 10px;
         font-weight: bold;
         width: 301.6px;
-        height:53px
+        height:53px;
+        height:100%;
+        padding-right: 10px;
+        padding-left: 10px;
+
+
     
     }
 }
@@ -110,22 +117,11 @@ button.two_buttons:active {
 }
 
 #check_link {
-    opacity: 0.3
+    opacity: 0.3;
+    margin-bottom: 0px;
+    
 }
 
-a {
-    display: inline-block;
-    text-decoration: underline;
-    color: inherit;
-    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-
-a:hover {
-    transform: scale(1.1);
-    color:black
-}
 
 #expression_field {
     outline: none;
