--- a/src/components/Months/month.css
+++ b/src/components/Months/month.css
@@ -6,5 +6,19 @@
 
 
 .month_input {
-    width: 100px;
+    width: 70px;
+    height:20px
+}
+
+.time_and_day {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.time {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
