--- a/src/components/Selector/selector.css
+++ b/src/components/Selector/selector.css
@@ -1,11 +1,31 @@
-.selector {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
+
 
 input:hover {
     cursor: pointer;
 }
 
 
+@media (max-width: 600px) {
+
+    .selector {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }  
+
+
+}
+  
+
+@media (min-width: 601px) {
+    .selector {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }  
+}
+  
+
+label:hover {
+    cursor: pointer;
+}
