--- a/src/components/Selector/selector.css
+++ b/src/components/Selector/selector.css
@@ -11,7 +11,12 @@ input:hover {
         display: flex;
         flex-direction: column;
         align-items: center;
-    }  
+    }
+
+    .selector_container {
+        display: flex;
+        flex-direction: column;
+    }
 
 
 }
@@ -23,6 +28,11 @@ input:hover {
         flex-direction: column;
         align-items: flex-start;
     }  
+
+    .selector_container {
+        display: flex;
+        flex-direction: column;
+    }
 }
   
 
